Fix deploy